--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://reservation.cbdabhwbk8bb.us-east-1.rds.amazonaws.com/reservation
+spring.datasource.url=jdbc:mysql://reservation.cbdabhwbk8bb.us-east-1.rds.amazonaws.com:3306/reservation
 spring.datasource.username=admin
 spring.datasource.password=test1234
 spring.jpa.hibernate.ddl-auto = update
